--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a class="resume-link"
                               href="mailto:#">ricardosilvarego90@gmail.com</a></li>
                         <li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link"
-                              href="#">stew09.github.io/ricardocv/</a></li>
+                           target="blank" href="http://stew09.github.io/ricardocv">stew09.github.io/ricardocv</a></li>                 
                         <li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Viana do Castelo</li>
                      </ul>
                   </div>
